looking great, struggling with some z-index issues

--- a/src/App.css
+++ b/src/App.css
@@ -55,42 +55,20 @@ p {
 }
 /* Content and Lightbox Wrapper */
 #wrapper {
-  position: relative;
+  /* no position because it would affect the z-index and the content inside can't be clicked */
   display: flex;
   justify-content: center;
 }
 /* Content */
 .content {
-  position: relative;
-  top: 100px;
   display: flex;
   justify-content: center;
-  /* flex-direction: row;# */
   flex-wrap: wrap;
   align-content: flex-start;
-  /* overflow: scroll; */
-  height: 100%; 
-  padding: 40px 0;
-  width: 1600px;
-  z-index: -20;
-}
-/* Card */
-#card:hover {
-  top: -5px;
-}
-#forhover {
-  position: relative;
-  width:100%;
   height: 100%;
-  background-color: #fff;
-  z-index: 21;
-  opacity: 0%;
+  margin: 110px 0 50px 0;
+  width: 1600px;
 }
-#forhover:hover {
-  opacity: 50%;
-}
-/* Lightbox */
-
 /* Footer */
 #footer {
   position: fixed;
@@ -103,9 +81,9 @@ p {
   width: 100%;
   background-color: #7992C1;
   color: #E7E7E7;
-  z-index: -10;
+ /* Navbar and Footer rendering over blackout... */
+  z-index: 0;
 }
-
 /* Responsiveness */
 @media only screen and (max-width: 1600px) {
   .content {
@@ -115,6 +93,7 @@ p {
 @media only screen and (max-width: 1366px) {
   .content {
     width: 1000px;
+    top: 0;
   }
 }
 @media only screen and (max-width: 1100px) {
